c/examples/writing-a-c-compiler-tests/tests/chapter_8/valid/extra_credit/compound_assignment_controlling_expression.c
int main(void) {
    int i = 100;
    int sum = 0;
    do sum += 2;
    while (i -= 1);
    return (i == 0 && sum == 200);
}