c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_parse/do_while_empty_parens.c
int main(void) {
    do
        1;
    while ();
    return 0;
}